--- a/index.html
+++ b/index.html
@@ -1,134 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Data Promotion for E-Learning</title>
-    <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>To Swabrah 💖</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        body {
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
-            color: #fff;
-            text-align: center;
-            padding: 0;
-        }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-image: url('flo.jpeg'); /* Replace */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 100vh;
+      backdrop-filter: blur(4px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      overflow: hidden;
+    }
 
-        header {
-            padding: 50px 20px;
-            background: #333;
-            color: #fff;
-        }
+    .message-card {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      padding: 2rem;
+      max-width: 600px;
+      text-align: center;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      color: #e4d4d4;
+      z-index: 2;
+      animation: heartbeat 2s infinite, fadeInUp 1.5s ease forwards;
+    }
 
-        header h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-        }
+    .message-card h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: #e7dfdf;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    }
 
-        header p {
-            font-size: 1.2em;
-            margin-top: 10px;
-        }
+    .message-card p {
+      font-size: 1.2rem;
+      line-height: 1.7;
+      margin-bottom: 1.5rem;
+    }
 
-        .promo-container {
-            margin-top: 50px;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    .rounded-image {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #fff;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 12px rgba(255, 255, 255, 0.3);
+      animation: popIn 1.5s ease-out;
+    }
 
-        .promo-container h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
+    .swabrah-img {
+      position: absolute;
+      bottom: -30px;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0.1;
+      width: 100%;
+      max-width: 300px;
+      z-index: 1;
+      animation: fadeIn 6s ease-in-out infinite alternate;
+    }
 
-        .promo-container p {
-            font-size: 1.1em;
-            margin-bottom: 15px;
-            line-height: 1.5;
-        }
+    .heart {
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      background: pink;
+      transform: rotate(45deg);
+      animation: floatHeart 8s linear infinite;
+    }
 
-        .promo-container .button {
-            background-color: #ff5722;
-            padding: 15px 30px;
-            color: white;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-top: 20px;
-        }
+    .heart::before,
+    .heart::after {
+      content: "";
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      background: pink;
+      border-radius: 50%;
+    }
 
-        .promo-container .button:hover {
-            background-color:rgb(234, 175, 157);
-        }
+    .heart::before {
+      top: -7.5px;
+      left: 0;
+    }
 
-        .footer {
-            margin-top: 50px;
-            padding: 20px;
-            background: #333;
-            color: #fff;
-            text-align: center;
-        }
+    .heart::after {
+      top: 0;
+      left: -7.5px;
+    }
 
-        /* Mobile Responsiveness */
-        @media screen and (max-width: 768px) {
-            header h1 {
-                font-size: 2.5em;
-            }
+    @keyframes floatHeart {
+      0% {
+        transform: translateY(100vh) scale(1) rotate(45deg);
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-20vh) scale(1.5) rotate(45deg);
+        opacity: 0;
+      }
+    }
 
-            .promo-container {
-                padding: 30px;
-            }
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
 
-            .promo-container h2 {
-                font-size: 1.8em;
-            }
+    @keyframes popIn {
+      0% { transform: scale(0.5); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
 
-            .promo-container p {
-                font-size: 1em;
-            }
+    @keyframes fadeIn {
+      from { opacity: 0.1; }
+      to { opacity: 0.2; }
+    }
 
-            .promo-container .button {
-                font-size: 1.1em;
-            }
-        }
-    </style>
+    @keyframes heartbeat {
+      0%, 100% { transform: scale(1); }
+      25% { transform: scale(1.03); }
+      50% { transform: scale(1); }
+      75% { transform: scale(1.03); }
+    }
+
+    footer {
+      position: absolute;
+      bottom: 10px;
+      font-size: 0.9rem;
+      color: #eee;
+      z-index: 3;
+    }
+
+    @media (max-width: 600px) {
+      .message-card {
+        padding: 1.5rem;
+      }
+
+      .message-card h1 {
+        font-size: 2rem;
+      }
+
+      .message-card p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Free Data for E-Learning</h1>
-        <p>Special Reward for New Curriculum Students to Help with E-Learning</p>
-    </header>
+  <!-- Soft Background Music -->
+  <audio autoplay loop hidden>
+    <source src="love.mp3" type="audio/mp3">
+  </audio>
 
-    <section class="promo-container">
-        <h2>Get Free Data to Stay Connected!</h2>
-        <p>As a new curriculum student, you are eligible for free data to support your online learning experience.</p>
-        <p>This offer is available for:</p>
-        <ul style="list-style: none; padding-left: 0;">
-            <li><strong>MTN:</strong> Get up to 2GB of free data to access e-learning platforms.</li>
-            <li><strong>Airtel:</strong> Get up to 1.5GB of free data for uninterrupted e-learning.</li>
-        </ul>
-        <p>Take advantage of this offer and continue learning without data worries!</p>
-        <a href="google.html">
-        <button class="button">Sign In to Claim Your Free Data</button></a>
-    </section>
+  <!-- Confetti on Load -->
+  <script>
+    window.onload = () => {
+      confetti({
+        particleCount: 150,
+        spread: 100,
+        origin: { y: 0.6 },
+      });
 
-    <div class="footer">
-        <p>Ministry of Education and Sports | &copy; 2025</p>
-    </div>
+      // create floating hearts
+      for (let i = 0; i < 20; i++) {
+        const heart = document.createElement('div');
+        heart.classList.add('heart');
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.animationDuration = 4 + Math.random() * 6 + "s";
+        document.body.appendChild(heart);
+      }
+    };
+  </script>
+
+  <!-- Optional: Your Image (Tendo) -->
+  <img src="t1.png" alt="Tendo" class="rounded-image" />
+
+  <div class="message-card animate__animated animate__fadeInUp">
+    <h1>Dear Swabrah, 💌</h1>
+    <p>
+      Thank you for being such an amazing friend. Your kindness, your smile, your presence—
+      it means more than you know. I pray that this beautiful connection we share only grows stronger,
+      and maybe, just maybe, into something even more special. 💫
+    </p>
+    <p>With all my gratitude and hope,</p>
+    <p>— Tendo ❤️</p>
+  </div>
+
+  <!-- Fading Swabrah Image -->
+  <img src="swb.png" alt="Swabrah" class="swabrah-img" />
+
+  <footer>Crafted with heart, just for you 💕</footer>
 
 </body>
 </html>
