--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-image: url('flo.jpeg'); /* Replace */
+      background-image: url('Flo.jpeg'); /* Replace */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -204,7 +204,7 @@
   </div>
 
   <!-- Fading Swabrah Image -->
-  <img src="swb.png" alt="Swabrah" class="swabrah-img" />
+  <img src="Swb.png" alt="Swabrah" class="swabrah-img" />
 
   <footer>Crafted with heart, just for you 💕</footer>
 
