--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       font-family: 'Outfit', sans-serif;
       background: url('Flo1.jpeg') no-repeat center center fixed;
       background-size: cover;
-      color: #fff;
+      color: #030202;
       position: relative;
       min-height: 100vh;
       overflow-x: hidden;
     }
     .backdrop-card {
       backdrop-filter: blur(12px) brightness(0.9);
-      background-color: rgba(255, 255, 255, 0.15);
+      background-color: rgba(222, 172, 198, 0.853);
       border-radius: 20px;
       padding: 2rem;
       max-width: 90%;
@@ -36,12 +36,12 @@
     .backdrop-card h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 3rem;
-      color: #ffedf4;
+      color: #000000;
       margin-bottom: 1rem;
     }
     .backdrop-card p {
       font-size: 1.2rem;
-      color: #fefefe;
+      color: #050303;
     }
     .swabrah-image {
       width: 180px;
@@ -108,7 +108,7 @@
       position: relative;
       text-align: center;
       font-size: 0.9rem;
-      color: #ddd;
+      color: #000000;
       margin-bottom: 1rem;
       z-index: 2;
     }
@@ -123,7 +123,7 @@
       padding: 0.7rem 1.2rem;
       border: none;
       background-color: #ff7eb3;
-      color: white;
+      color: rgb(255, 253, 253);
       font-size: 1rem;
       border-radius: 30px;
       box-shadow: 0 4px 15px rgba(255,126,179,0.4);
@@ -137,7 +137,7 @@
       left: 50%;
       transform: translate(-50%, -50%) scale(0);
       background-color: rgba(255, 255, 255, 0.95);
-      color: #222;
+      color: #000000;
       padding: 2rem;
       border-radius: 15px;
       text-align: center;
